Stop showing the horizontal scrollbar on the room modal

--- a/src/components/templates/PartyMap/components/RoomModal/RoomModal.scss
+++ b/src/components/templates/PartyMap/components/RoomModal/RoomModal.scss
@@ -79,6 +79,7 @@ $spacing: 20px;
 
   &__events {
     max-height: 35vh;
+    overflow-x: hidden;
     overflow-y: auto;
     // @debt these overrides are here because ScheduleItem sets incompatible margins/etc.
     //   We should just clean it up there instead.
